[package]
name = "factorflow"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0"
categories = ["command-line-utilities"]
keywords = ["cli", "command-line"]
readme = "README.md"
repository = "https://github.com/walker84837/factorflow-rs"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.2", features = ["derive"] }
